@@ -1,10 +1,12 @@
 = Unreleased =
 # Fixed
 - changed so that the recipient name is taken from the shipping information
+- fixed Omniva info saving if Order history data not exists
 
 # Improved
 - changed the name of the generate manifest button and added a description
 - added missing LT translations
+- added error message when shipment sending method not available
 
 = 2.0.4 =
 # Fixed
